2009-08-21  Gordon Williams <gordon.williams@collabora.co.uk>

	Added small title bar buttons for portrait mode.
	
	* src/home/hd-render-manager.c: Set HDTB_VIS_SMALL_BUTTONS when in
	  portrait mode.
	* src/home/hd-title-bar.c
	* src/home/hd-title-bar.h: Added hd_title_bar_get_button_width and
	  HDTB_VIS_SMALL_BUTTONS, and reposition icons accordingly when
	  the state flag is set.
	* src/mb/hd-status-area.c: Added comment about positioning

2009-08-21  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.90

2009-08-21  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#132154 - USE-TIME F-MEDIA PLAYER: UI components visibility
	when device is dimmed

	* src/home/hd-render-manager.c (hd_render_manager_set_state): Update
	the on_current_desktop window property if the applet shown state
	changes.

	* src/mb/hd-desktop.c (hd_desktop_stack): Extract function to update
	on_current_desktop window property.

	* src/mb/hd-comp-mgr.c
	(hd_comp_mgr_update_applets_on_current_desktop_property):
	* src/mb/hd-comp-mgr.h: Move function to update applets
	on_current_desktop window property to here. Only set the property if
	the applets are shown state is set.

	* debian/changelog: update.

2009-08-21  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.89

	* src/hildon-desktop-views.schemas: Default value for
	disable_phone_gesture is now true. Fixes: NB#134396

	Release 2.2.88

2009-08-20  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#134110: Need to dither backgrounds down to device's 
	                  capabilities
	* src/home/hd-home-view.c: Dither png files down to 16 bits. This makes
	  a better quality image than letting GLES dither to 16 bits, and 
	  increases performance and decreases memory usage.

	We now set the _MAEMO_ROTATION_TRANSITION property to show if we are
	currently doing a rotation transition or not.

	* src/mb/hd-atoms.c
	* src/mb/hd-atoms.h: added _MAEMO_ROTATION_TRANSITION	
	* src/util/hd-util.c